--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,10 @@ li.navbar-active_item {
 	opacity: 0.5;
 }
 
+.rhap_volume-bar {
+	visibility: hidden;
+}
+
 .rhap_progress-indicator:hover {
 	background: maroon;
 }
